<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellowBright"
    tools:context=".gui.Store">


    <TableRow
        android:id="@+id/tbl_coins"
        android:layout_width="283dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/drw_fill_white_border_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_coinsSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/tv_coinsSum"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/tv_coins"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

    </TableRow>

    <LinearLayout
        android:id="@+id/ll_store"
        android:layout_width="361dp"
        android:layout_height="339dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbl_coins">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorYellowMedium"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/tv_lock"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/tv_price"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/tv_char"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_storePlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drw_fill_white_border_yellow"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_store"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>