<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drw_fill_white_border_yellow">


    <ImageView
        android:id="@+id/img_purchase"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/t006_beach_ball" />

    <TextView
        android:id="@+id/tv_purchase"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tv_purchase"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/img_purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_approve"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"

        android:background="@drawable/drw_fill_white_border_yellow"
        android:text="@string/btn_approve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/drw_fill_white_border_yellow"
        android:text="@string/tv_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_totalCoinsNewSum"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tv_totalCoinsNewSum"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tv_totalCoinsNew"
        app:layout_constraintEnd_toStartOf="@+id/tv_totalCoinsNew"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_totalCoinsNew"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/tv_totalCoinsNew"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/tv_totalCoinsNew"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_approve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_purchase"
        app:layout_constraintVertical_bias="0.485" />

</android.support.constraint.ConstraintLayout>