<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/drw_fill_white_border_red"
    android:elevation="5dp">


    <TextView
        android:id="@+id/tv_whoFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/tv_who_first"
        android:textAlignment="center"
        android:textColor="@color/colorBlack" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        >

        <LinearLayout
            android:id="@+id/ll_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/drw_fill_white_border_red"
            >


            <TextView
                android:id="@+id/tv_first_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drw_fill_red_border_red"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/tv_fist" />

            <ImageView
                android:id="@+id/img_first"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"

                app:srcCompat="@drawable/t005_banana" />

            <TextView
                android:id="@+id/tv_first_player"
                android:gravity="center"
                android:textAlignment="center"
                android:text="TextView"
                android:layout_marginBottom="20dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/drw_fill_white_border_red"
            >


            <TextView
                android:id="@+id/tv_second_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/drw_fill_red_border_red"
                android:text="@string/tv_second" />

            <ImageView
                android:id="@+id/img_second"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/t004_starfish"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_second_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:gravity="center"
                android:textAlignment="center"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/drw_fill_white_border_red"
            android:text="@string/btn_switch" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/drw_fill_red_border_red"
            android:text="@string/btn_start" />


    </LinearLayout>


</RelativeLayout>