<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRedBright"
    tools:context=".gui.ChoosePlayer">


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_choose_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_rival"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorRedMedium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/tv_rival"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_chooseRival"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/drw_fill_white_border_red">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorRedMedium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/tv_me"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_chooseMy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/drw_fill_white_border_red" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_choose_player"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorRedMedium"
        android:text="@string/tv_choosePlayer"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>